--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,29 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "friendsofsymfony/oauth-server-bundle": "^1.6",
+        "friendsofsymfony/rest-bundle": "^2.5",
+        "friendsofsymfony/user-bundle": "^2.1",
+        "jms/serializer-bundle": "^2.4",
+        "mbezhanov/faker-provider-collection": "^1.2",
+        "sensio/framework-extra-bundle": "^5.4",
         "symfony/console": "4.3.*",
         "symfony/dotenv": "4.3.*",
         "symfony/flex": "^1.3.1",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "4.3.*",
+        "symfony/maker-bundle": "^1.13",
+        "symfony/orm-pack": "^1.0",
+        "symfony/security-bundle": "4.3.*",
+        "symfony/swiftmailer-bundle": "^3.2",
+        "symfony/templating": "4.3.*",
+        "symfony/translation": "4.3.*",
+        "symfony/validator": "4.3.*",
         "symfony/yaml": "4.3.*"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.2",
+        "fzaninotto/faker": "^1.8"
     },
     "config": {
         "preferred-install": {
